@@ -24,7 +24,7 @@ class Peak_Core_Extension_Modules
     	$module_path = (isset($path)) ? $path : $config->modules_path.'/'.$module;
     	
     	if(is_dir($module_path)) {
-    		
+    	        		
     		//backup previous application configs before overloading core configurations
     		Peak_Registry::set('app_core_config', clone $config);
     		
@@ -32,7 +32,16 @@ class Peak_Core_Extension_Modules
     		
     		//get default path structure for module path application
     		$config->path = Peak_Core::getDefaultAppPaths($module_path);
+    		
+    		//*trivial* need to be better than this
+    		//first attempt to add ini config for a modules
+    	    /*if(file_exists(Peak_Core::getPath('application').'/module.ini')) {
+    	        Peak_Core::initConfig('module.ini', $path);
+    	        Peak_Registry::o()->view->_registryConfig();
+    	    }*/
     	}
+    	
+    	
 	}
 		
 }
