@@ -1,5 +1,7 @@
 #VERSION 0.8.4#
 
+ - deleted deprecated method config() in Peak_Core
+
  - added static methods reset(), resetAll(), getMS(), isCompleted() and _elapsed() to Peak_Chrono
 
  - rewrited class Peak_Chrono. This classs now manage a global timer and/or multiple timers
